sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:6: error: not found: value temps
    temps = getValue(i)
    ^AlgInsertionSort:7: error: reassignment to val
    j = i
      ^AlgInsertionSort:8: error: not found: value x
    while( j > 0 & getValue(j - 1) > x){
                                     ^AlgInsertionSort:10: error: reassignment to val
      j = j - 1
        ^